<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".GeoWeatherFragment">
    <TextView
            android:text="@string/textview_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_geocoordinates_latitude"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/text_input_layout_latitude" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_latitude"/>

    <TextView
            android:text="@string/textview_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_geocoordinates_longitude"
            app:layout_constraintStart_toStartOf="@+id/text_view_geocoordinates_latitude" android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/text_input_layout_longitude" app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_longitude"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_input_layout_longitude">


        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/textview_latitude" android:id="@+id/edit_text_latitude"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_layout_longitude"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_latitude"
            app:layout_constraintStart_toEndOf="@+id/text_view_geocoordinates_longitude"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_latitude">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/textview_longitude" android:id="@+id/edit_text_longitude"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/button_enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_enter" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_longitude"
            app:layout_constraintStart_toStartOf="@+id/text_view_geocoordinates_longitude"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_longitude"
            android:background="@drawable/button_bg"
            android:textColor="@android:color/white"
    />

    <fragment
            android:id="@+id/geo_coordinates_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/button_enter"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent" class="tk.lorddarthart.geoweather.GeoWeatherMoreFragment"
            tools:layout="@layout/fragment_geo_weather_more"/>

</android.support.constraint.ConstraintLayout>